# mmg

./: .gitignore  CMakeLists.txt  README.md
libexamples/mmgs/pybind_example/: CMakeLists.txt  py.cpp  setup.py  test.py
